...
                    name = "Lord of the Rings",
                    genre = "Fantasy",
                    author = "JRR Tolkien"
                ),
                StoryEntity(
                    name = "Dune",
                    genre = "Sci-Fi",
                    author = "Frank Herbert"
                ),
                StoryEntity(
                    name = "Star Wars",
                    genre = "Sci-Fi",
                    author = "George Lucas"
...
